/***********************************************************************
X3 ChangeLog

2013-02-18  Alex Schumann <rubin@afternet.org>
        * all: Converted from mercurial to git. (testing email commit messages again)

2013-01-27  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/nickserv.c: Fix for crash bug when using calling *NickServ.oset
	with an account name where nobody is online using that account and no
	fakehost is set.

2012-04-29  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/x3ldap.c: Replaced ldap_get_values() with ldap_get_values_len().

2012-01-26  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/dict-splay.c: Fix for possible crash bugs in dict_splay()
	and dict_remove2();

	* src/tools.c: Fix for crash bug in irccasecmp();

2012-01-24  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/proto-p10.c: Fixed irc_topic() to honour server/hidden_host_type
	and associated config settings.

2012-01-16  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/chanserv.c: Fix for USER AUTOOP option being ignored during
	ChanServ.resync.

2012-01-13  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/opserv.help: Fixed typo in help for TRACE CRITERIA.

2011-11-16  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/nickserv.c: Added a new line to NickServ.accountinfo to show
	new email address for email change cookies.

2011-10-12  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/chanserv.help: Fixed typo in staff register help.

2011-09-29  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/chanserv.help: Fixed typo in durations help.

2011-07-18  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/proto-p10.c: Fix for "PARSE ERROR" on "Ghost 5 Numeric Collided"
	kill message.

2011-06-29  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/nickserv.c: Fixed a bug when reading services/nickserv/hard_maxlogins
	from x3.conf

2011-01-25  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/proto-p10.c: Fix for auto-oper bug where PRIVS were not
	being applied on Nefarious branch versions (or in short reverted